# alzareth-the-fall-of-asteria

./: .gitignore  CMakeLists.txt  Makefile  README.md  game  tp3-smb
.github/: pull_request_template.md
Assets/Levels/Level-1/: beach_textures.tsx  level_1.csv  level_1.json  level_1.tmx  level_1_new.tmx  level_1_no_border.tmx
Assets/Levels/Level-2/: level_2.tmx
Assets/Levels/Level-3/: level_3.tmx  level_3_short.tmx
Assets/Sprites/00-Player/: main_character.json
Assets/Sprites/Alzareth/DeathRay/: Alzareth_Death_Ray.json
Assets/Sprites/Alzareth/Shield/: Alzareth_Shield.json
Assets/Sprites/Alzareth/Wizard/: Alzareth.json
Assets/Sprites/BallAtackToken/: atack_ball.json
Assets/Sprites/Fireball/: fireball.json
Assets/Sprites/Ghost/: ghost.json
Assets/Sprites/GhostAttack/: ghostAttack.json
Assets/Sprites/Golem/: golem.json
Assets/Sprites/Golem_2/: golem2.json  golem22.json
Assets/Sprites/Golem_2/pack-result/: texture.json
Assets/Sprites/Items/Health/: health_potion.json
Assets/Sprites/Items/Invulnerability/: invulnerability_potion.json
Assets/Sprites/Items/initial/Energy/: energy_potion.json
Assets/Sprites/Skeleton/: Skeleton.json
Assets/Sprites/Weapons/Sword/: sword.json
Assets/Sprites/Weapons/Token/: magic_token.json
Source/: Game.cpp  Game.h  Main.cpp
Source/Actors/: Actor.cpp  Actor.h  Enemy.cpp  Enemy.h
Source/Actors/Alzareth/: Alzareth.cpp  Alzareth.h
Source/Actors/Alzareth/Attacks/: DeathRay.cpp  DeathRay.h
Source/Actors/Background/: Texture.cpp  Texture.h
Source/Actors/Enemies/: Enemy.cpp  Enemy.h
Source/Actors/Enemies/Ghost/: Ghost.cpp  Ghost.h
Source/Actors/Enemies/Golem/: Golem.cpp  Golem.h
Source/Actors/Enemies/Golem2/: Golem2.cpp  Golem2.h
Source/Actors/Enemies/Skeleton/: Skeleton.cpp  Skeleton.h
Source/Actors/Ghost/: Ghost.cpp  Ghost.h
Source/Actors/Golem/: Golem.cpp  Golem.h
Source/Actors/Golem2/: Golem2.cpp  Golem2.h
Source/Actors/Items/: Item.cpp  Item.h
Source/Actors/Items/Collectible/: CollectibleItem.cpp  CollectibleItem.h
Source/Actors/Items/Weapons/Melee/: Sword.cpp  Sword.h
Source/Actors/Items/Weapons/Ranged/: MagicToken.cpp  MagicToken.h
Source/Actors/Player/: Player.cpp  Player.h
Source/Actors/Projectile/: Projectile.cpp  Projectile.h
Source/Actors/Projectile/BallAttackToken/: BallAttackToken.cpp  BallAttackToken.h
Source/Actors/Projectile/Fireball/: Fireball.cpp  Fireball.h
Source/Actors/Projectile/GhostAttack/: GhostAttack.cpp  GhostAttack.h
Source/Actors/Skeleton/: Skeleton.cpp  Skeleton.h
Source/Components/: Component.cpp  Component.h
Source/Components/ColliderComponents/: AABBColliderComponent.cpp  AABBColliderComponent.h  CircleColliderComponent.cpp  CircleColliderComponent.h
Source/Components/DrawComponents/: DrawAnimatedComponent.cpp  DrawAnimatedComponent.h  DrawComponent.cpp  DrawComponent.h  DrawPolygonComponent.cpp  DrawPolygonComponent.h  DrawSpriteComponent.cpp  DrawSpriteComponent.h
Source/Components/PhysicsComponents/: RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Components/UI/: HUDComponent.cpp  HUDComponent.h
Source/Inventory/: Inventory.cpp  Inventory.h
Source/Items/: CollectibleItem.cpp  CollectibleItem.h  Item.cpp  Item.h
Source/Menus/: BaseMenu.cpp  BaseMenu.h
Source/Menus/Pause/: PauseMenu.cpp  PauseMenu.h
Source/Systems/Audio/: AudioSystem.cpp  AudioSystem.h
Source/Systems/SceneManager/: SceneManagerSystem.cpp  SceneManagerSystem.h
Source/UIElements/: UIButton.cpp  UIButton.h  UIElement.cpp  UIElement.h  UIFont.cpp  UIFont.h  UIImage.cpp  UIImage.h  UIScreen.cpp  UIScreen.h  UIText.cpp  UIText.h
Source/Utils/: CSV.h  Random.h  SpatialHashing.cpp  SpatialHashing.h
